# PowerBI-Developer

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE_REVIEW.md  CONTRIBUTING.md  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  pyproject.toml  railway.toml
.github/workflows/: ci.yml
config/: settings.yaml
kong/: kong.yaml
src/pbi_developer/: __init__.py  cli.py  config.py  exceptions.py  knowledge_graph.py  observability.py
src/pbi_developer/agents/: base.py  dax_generator.py  diagram_interpreter.py  field_mapper.py  pbir_generator.py  planner.py  qa.py  rls.py  style_extractor.py  wireframe.py
src/pbi_developer/connectors/: auth.py  powerbi_rest.py  snowflake.py  xmla.py
src/pbi_developer/deployment/: deployer.py  pipeline_manager.py  tester.py
src/pbi_developer/inputs/: brief.py  image.py  pptx_parser.py  svg_parser.py  video.py
src/pbi_developer/pbir/: builder.py  models.py  templates.py  theme.py  validator.py
src/pbi_developer/pipeline/: orchestrator.py  stages.py
src/pbi_developer/prompts/: __init__.py  dax_generator.yaml  diagram_interpreter.yaml  field_mapper.yaml  planner.yaml  qa.yaml  registry.py  rls.yaml  style_extractor.yaml  wireframe.yaml
src/pbi_developer/utils/: files.py  logging.py
src/pbi_developer/web/: __init__.py  admin_service.py  app.py  auth.py  models.py  run_store.py  sse.py  store_factory.py  supabase_client.py  supabase_run_store.py  user_settings_service.py  version_control.py
src/pbi_developer/web/routes/: admin.py  api.py  auth_routes.py  onboarding.py  pages.py  versions.py  wizard.py
src/pbi_developer/web/static/: admin.js  app.css  app.js  config-editor.js  onboarding.js  prompt-editor.js  wireframe-mockup.js  wizard.js
src/pbi_developer/web/templates/: admin.html  base.html  dashboard.html  deploy.html  generate.html  login.html  onboarding.html  refine.html  settings.html  versions.html
src/pbi_developer/web/templates/_partials/: brief_review.html  config_editor.html  dax_review.html  field_mapping_review.html  metadata_browser.html  progress.html  prompt_editor.html  rls_review.html  run_card.html  step_indicator.html  wireframe_mockup.html
supabase/: schema.sql
templates/themes/: default_theme.json
tests/: conftest.py  test_cli.py  test_config.py  test_exceptions.py  test_knowledge_graph.py
tests/fixtures/: sample_brief.md  sample_model_metadata.md  sample_rls_examples.json
tests/test_agents/: test_base.py  test_diagram_interpreter.py  test_pbir_generator.py  test_planner.py  test_qa.py  test_refinement.py
tests/test_connectors/: test_auth.py  test_powerbi_rest.py  test_xmla.py
tests/test_deployment/: test_deployer.py  test_pipeline_manager.py  test_tester.py
tests/test_inputs/: test_brief.py  test_pptx_parser.py  test_svg_parser.py
tests/test_pbir/: test_builder.py  test_models.py  test_templates.py  test_theme.py  test_validator.py
tests/test_pipeline/: test_artifacts.py  test_orchestrator.py
tests/test_utils/: test_files.py
tests/test_web/: test_app.py  test_auth.py  test_store_factory.py  test_supabase_run_store.py  test_version_control.py  test_wizard.py
